--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
     box-sizing: border-box;
     font-family: 'poppins', sans-serif;
     
-    
 }
 
 
@@ -35,13 +34,16 @@ body{
     padding: 50px;
     height: 330px;
     position: relative;
-    ;
+    max-width: 350px;
+
     
 }
 .resultado{
     display: flex;
+    max-width: 350px;
     background: linear-gradient(43deg, #4158D0, #C850C0);
     height: 100px;
+    padding: 50px;
     position: relative;
     border-bottom-right-radius: 50px;
     border-bottom-left-radius: 50px;
@@ -52,8 +54,7 @@ body{
     font-size: .8rem;
     font-weight: 500;
     text-align: center;
-    word-wrap: normal;
-    
+    word-break: break-word;
 }
 
 
